--- a/ATF/Atf/AtfPicturePlugin/Statistics.csproj
+++ b/ATF/Atf/AtfPicturePlugin/Statistics.csproj
@@ -71,6 +71,12 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Atf\PING.csproj">
+      <Project>{5F6C80E2-0056-4B70-96AD-E02EBCBE85D5}</Project>
+      <Name>PING</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
