--- a/ATF/Atf/Atf/PING.csproj
+++ b/ATF/Atf/Atf/PING.csproj
@@ -58,6 +58,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="LocalDataBase.cs" />
+    <Compile Include="MySerializer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
