--- a/trunk/ATF/Atf/AtfPicturePlugin/Statistics.csproj
+++ b/trunk/ATF/Atf/AtfPicturePlugin/Statistics.csproj
@@ -31,9 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Psl.Core, Version=4.2010.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Psl\Psl\lib\Psl.Core.dll</HintPath>
+    <Reference Include="Psl.Core">
+      <HintPath>..\..\..\..\..\Psl.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
