--- a/trunk/ATF/Atf/Clustering/Clustering.csproj
+++ b/trunk/ATF/Atf/Clustering/Clustering.csproj
@@ -59,7 +59,18 @@
       <DependentUpon>PingClusteringCluster.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="SimpleDTW.cs" />
+    <Compile Include="FormKmeans.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="FormKmeans.Designer.cs">
+      <DependentUpon>FormKmeans.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Atf\PING.csproj">
@@ -68,8 +79,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="FormKmeans.resx">
+      <DependentUpon>FormKmeans.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PingClusteringCluster.resx">
       <DependentUpon>PingClusteringCluster.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
