--- a/ATF/Atf/AtfPicturePlugin/Statistics.csproj
+++ b/ATF/Atf/AtfPicturePlugin/Statistics.csproj
@@ -85,6 +85,10 @@
   <ItemGroup>
     <None Include="Resources\google_maps_icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\staticmapbigRoad.png" />
+    <Content Include="Resources\staticmapterrainBig.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
