--- a/trunk/ATF/Atf/AtfPicturePlugin/Statistics.csproj
+++ b/trunk/ATF/Atf/AtfPicturePlugin/Statistics.csproj
@@ -86,8 +86,10 @@
     <None Include="Resources\google_maps_icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\staticmapbigRoad.png" />
-    <Content Include="Resources\staticmapterrainBig.png" />
+    <None Include="Resources\staticmapbigRoad.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\staticmapterrainBig.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
