--- a/trunk/ATF/Atf/Atf/PING.csproj
+++ b/trunk/ATF/Atf/Atf/PING.csproj
@@ -60,6 +60,7 @@
     <Compile Include="MySerializer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScrollableMaps.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -86,6 +87,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\save.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\staticmapbigRoad.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\staticmapterrainBig.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
