--- a/trunk/ATF/Atf/Atf/PING.csproj
+++ b/trunk/ATF/Atf/Atf/PING.csproj
@@ -35,6 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Psl.Core">
       <HintPath>..\..\..\..\..\Psl.Core.dll</HintPath>
     </Reference>
