--- a/ATF/Atf/Atf/PING.csproj
+++ b/ATF/Atf/Atf/PING.csproj
@@ -78,6 +78,12 @@
     <Compile Include="MySerializer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveData.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SaveData.Designer.cs">
+      <DependentUpon>SaveData.cs</DependentUpon>
+    </Compile>
     <Compile Include="ScrollableMaps.cs" />
     <Compile Include="StatsChartsVelib.cs" />
     <EmbeddedResource Include="MainForm.resx">
@@ -93,6 +99,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SaveData.resx">
+      <DependentUpon>SaveData.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
